--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@babel/runtime": "^7.12.13",
     "babel": "^6.23.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
+    "pm2": "^4.5.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
