--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.13",
+    "axios": "^0.21.1",
     "babel": "^6.23.0",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
-    "pm2": "^4.5.4",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "pm2": "^4.5.6",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.24.4",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
@@ -25,8 +29,11 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^6.0.0",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
     "sass": "^1.32.0",
-    "sass-loader": "^10.0.0",
+    "sass-loader": "^10.2.0",
     "vue-cli-plugin-vuetify": "^2.1.0",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
