add composition API

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.13",
+    "@vue/composition-api": "^1.0.0-rc.11",
     "axios": "^0.21.1",
     "babel": "^6.23.0",
     "core-js": "^3.6.5",
