--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.6.11",
     "vue-i18n": "^8.24.4",
     "vue-router": "^3.2.0",
+    "vue-toastification": "^1.7.11",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
